--- a/package.json
+++ b/package.json
@@ -5,8 +5,11 @@
   "author": "rmayer <cassettes90@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "bcrypt": "^3.0.7",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
+    "mysql": "^2.18.1",
     "nanoid": "^2.1.10",
     "swagger-ui-express": "^4.1.3"
   }
