--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "jsonwebtoken": "^8.5.1",
     "mysql": "^2.18.1",
     "nanoid": "^2.1.10",
+    "redis": "^2.8.0",
+    "request": "^2.88.0",
     "swagger-ui-express": "^4.1.3"
   }
 }
